# exchange-backoffice

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json
automation/: TEST_COVERAGE_REPORT.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
automation/features/: auth.feature  dashboard.feature  document-review.feature  inbox.feature  rbac.feature  sla-and-pipeline.feature  upload.feature  validation-rules.feature
automation/pages/: DashboardPage.ts  DocumentReviewPage.ts  InboxPage.ts  LayoutPage.ts  LoginPage.ts  UploadPage.ts
automation/steps/: auth.steps.ts  common.steps.ts  dashboard.steps.ts  document-review.steps.ts  inbox.steps.ts  rbac.steps.ts  sla-pipeline.steps.ts  upload.steps.ts  validation-rules.steps.ts
automation/support/: api-helper.ts
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: config.ts  db.ts  (+3 more)
ci/: .gitlab-ci.yml
design/: FR_StockwatchDeephaven.drawio  FR_StockwatchDeephaven.drawio.html  MLOps_DPO2.drawio  deephaven_ci.drawio
docs/: SPEC.md  devpost-submission.md  gitlab-ci-agent-pipeline-plan.md  linkedin-article.md  openapi.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
idea/AgenticTeam/sdk/python/: README.md  pyproject.toml
idea/AgenticTeam/sdk/python/sentinel_sdk/: __init__.py  buffer.py  client.py  cost.py  decorators.py  tracer.py
idea/AgenticTeam/sdk/python/sentinel_sdk/integrations/: __init__.py  crewai.py  langchain.py
idea/AgenticTeam/sdk/python/tests/: test_sdk.py
(+126 files in other folders)
