[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-sdk"
version = "0.1.0"
description = "Python SDK for Compliance Sentinel — AI agent compliance monitoring"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Compliance Sentinel Team" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["compliance", "sentinel", "ai-agents", "tracing", "security"]

# Zero hard dependencies beyond stdlib
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
crewai = ["crewai>=0.28"]
all = ["langchain-core>=0.2", "crewai>=0.28"]
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/compliance-sentinel/sentinel-sdk"
Documentation = "https://docs.sentinel.dev/sdk/python"

[tool.hatch.build.targets.wheel]
packages = ["sentinel_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
